# vpid

./: .gitignore  .qmlls.ini  Cargo.toml  README.md  build.rs  bun.lockb  package.json  pnpm-lock.yaml  run.sh  test.txt
.cargo/: config.toml
.github/workflows/: build-qt-static.yml  build.yml  release.yml
.opencode/skills/cxx-qt/: SKILL.md
.trae/documents/: unify-qt5.15.17-all-platforms.md
docs/superpowers/plans/: 2025-06-05-qt6-usb-refactor-plan.md
docs/superpowers/specs/: 2025-06-05-qt6-usb-refactor-design.md
qml/: DeviceTable.qml  MainPage.qml  Theme.qml  main.qml
src/: App.svelte  bindings.ts  lib.rs  main.rs  main.ts  styles.css  type.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: table.svelte
src/ui/: mod.rs  usb_manager.rs
src/usb/: class_codes.rs  enumerator.rs  hotplug.rs  mod.rs  models.rs
