[package]
name = "vpid"
version = "2.0.0"
description = "USB设备查看器 (Qt6 + qmetaobject-rs)"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/example/vpid"
keywords = ["usb", "qt6", "qml", "device-viewer"]
categories = ["hardware-support", "gui"]

[[bin]]
name = "vpid"
path = "src/main.rs"

[lib]
name = "vpid"
path = "src/lib.rs"

[dependencies]
qmetaobject = "0.2.3"
nusb = "0.2.0"
futures-lite = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
